Fix flags not playing nicely on small screens

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1133,4 +1133,14 @@ footer h3, h4 {
 	.news div:first-child {
 		padding: 0.5rem;
 	}
+
+	.large_flag {
+		max-width: 16rem;
+		max-height: 8rem;
+	}
+
+	.large_portrait {
+		max-height: 12rem;
+		max-width: 8rem;
+	}
 }
